对穷查理宝典笔记增加推荐书籍

--- a/notes/穷查理宝典.md
+++ b/notes/穷查理宝典.md
@@ -150,3 +150,24 @@
 
 25. lollapalooza倾向——数种心理倾向共同作用造成极端后果的倾向
 > 不要把原因想的过于简单.
+
+推荐书籍:
+1. 深奥的简洁:从混沌,复杂到地球生命的起源
+2. 诚信的背后:华尔街圈钱游戏的真相
+3. 我生活的种种模式:赫尔伯特·A.西蒙自传
+4. 温度,决定一切
+5. 枪炮,病菌与钢铁
+6. 第三种猩猩:人类的身世与未来
+7. 影响力
+8. 富兰克林自传
+9. 生活在极限之内:生态学,经济学与人口禁忌
+10. 自私的基因
+11. 洛克菲勒:一个关于财富的神话
+12. 国富国穷
+13. 沃伦·巴菲特的投资组合:掌握集中投资战略的秘诀
+14. 基因组:人种自传23章
+15. 谈判力只有偏执狂才能生存
+16. 勒斯·施瓦伯:因功绩而骄傲
+17. 犯人与大亨:经商的故事
+18. 筚路蓝缕的先行者:1840-1900的西部大开发
+19. 苏格兰人如何发明现代世界:西欧最穷的国家如何改变世界的真实故事和详尽内幕
